fix momentum scroll on mobile

--- a/client/scss/site/_site.scss
+++ b/client/scss/site/_site.scss
@@ -16,7 +16,6 @@ body {
 
 	@include breakpoints(none, medium) {
 		max-width: 100vw;
-		overflow-x: hidden;
 	}
 }
 
